# b

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release-please.yml  release.yml
src/: arch.rs  cache.rs  install.rs  list.rs  main.rs  releases.rs  symlink.rs
tests/: cli.rs
