[package]
name = "b"
version = "0.1.0"
edition = "2021"
description = "Interactively manage your Bun versions"
license = "MIT"
repository = "https://github.com/THernandez03/b"
keywords = ["bun", "version-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "b"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
